--- a/R/argweaver/NAMESPACE
+++ b/R/argweaver/NAMESPACE
@@ -18,6 +18,7 @@ export(plotStats)
 export(plotTraces)
 export(plotTree)
 export(plotTrees)
+export(plotTreesAtSites)
 export(plotTreesFromBed)
 export(probCoalCounts)
 export(psmcToPopsize)
