minor R code updates

--- a/R/argweaver/NAMESPACE
+++ b/R/argweaver/NAMESPACE
@@ -30,7 +30,9 @@ export(readPopModel)
 export(readPsmc)
 export(readSites)
 export(readStatsFile)
+export(scalePopModel)
 export(subSites)
+export(writeSites)
 import(grDevices)
 import(graphics)
 import(utils)
