--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,11 @@ crate-type = ["lib", "cdylib"]
 
 [dependencies]
 autocxx = "0.26.0"
+clap = { version = "4.4.18", features = ["derive"] }
+csv = "1.3.0"
 cxx = "1.0.115"
 pyo3 = { version = "0.19", features = ["abi3-py38", "extension-module", "multiple-pymethods"] }
+serde = { version = "1.0.195", features = ["derive"] }
 
 [build-dependencies]
 autocxx-build = "0.26.0"
