--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "argweavers"
-version = "0.8.1"
+version = "0.9.0"
 edition = "2021"
 authors = ["Tang Ziya <tcztzy@gmail.com>"]
 
@@ -14,12 +14,24 @@ autocxx = "0.26.0"
 clap = { version = "4.4.18", features = ["derive"] }
 csv = "1.3.0"
 cxx = "1.0.115"
-pyo3 = { version = "0.19", features = ["abi3-py38", "extension-module", "multiple-pymethods"] }
+nom = "7.1.3"
+polars = "0.37.0"
+pyo3 = { version = "0.20", features = ["abi3-py38", "extension-module", "multiple-pymethods"], optional = true }
+pyo3-polars = { version = "0.11.1", optional = true }
 serde = { version = "1.0.195", features = ["derive"] }
+tempfile = "3.9.0"
+
+[features]
+default = []
+extension-module = [
+    "dep:pyo3",
+    "dep:pyo3-polars",
+    "dep:pyo3-build-config",
+]
 
 [build-dependencies]
 autocxx-build = "0.26.0"
 cmake = "0.1"
 glob = "0.3.1"
 miette = { version = "5.10.0", features = ["fancy"] }
-pyo3-build-config = { version = "0.20.2", features = ["abi3-py38"] }
+pyo3-build-config = { version = "0.20.2", features = ["abi3-py38"], optional = true }
