--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "scipy>=1.10.1",
     "numpy>=1.24.4",
     "polars>=0.20.6",
-    "tajimas-d>=2.0.0",
+    "pyarrow>=15.0.0",
 ]
 
 [project.scripts]
