--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ clap = { version = "4.4.18", features = ["derive"] }
 csv = "1.3.0"
 cxx = "1.0.115"
 nom = "7.1.3"
-polars = "0.37.0"
+polars = { version = "0.37.0", features = ["lazy"] }
 pyo3 = { version = "0.20", features = ["abi3-py38", "extension-module", "multiple-pymethods"], optional = true }
 pyo3-polars = { version = "0.11.1", optional = true }
 serde = { version = "1.0.195", features = ["derive"] }
