--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,10 @@ crate-type = ["lib", "cdylib"]
 
 [dependencies]
 autocxx = "0.26.0"
-clap = { version = "4.4.18", features = ["derive"] }
+clap = { version = "4.4.18", features = ["derive", "cargo"] }
 csv = "1.3.0"
 cxx = "1.0.115"
+flate2 = "1.0.28"
 nom = "7.1.3"
 polars = { version = "0.37.0", features = ["lazy"] }
 pyo3 = { version = "0.20", features = ["abi3-py38", "extension-module", "multiple-pymethods"], optional = true }
