--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ dev-dependencies = [
     "pre-commit>=3.5.0",
     "pytest>=7.4.4",
     "pytest-cov>=4.1.0",
+    "sphinx>=7.1.2",
+    "esbonio-extensions>=0.2.2",
+    "myst-parser>=2.0.0",
 ]
 [tool.rye.scripts]
 cov-report = { chain = ["htmlcov", "htmlcov-serve"] }
