ADD: R -> renv -> rpy2 -> Python

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,9 @@ dynamic = ["version"]
 dependencies = [
     "scipy>=1.10.1",
     "numpy>=1.24.4",
-    "polars>=0.20.6",
+    "polars>=0.20.9",
     "pyarrow>=15.0.0",
+    "rpy2>=3.5.15",
 ]
 
 [project.scripts]
@@ -44,7 +45,7 @@ smc2bed-all = "argweaver.scripts.smc2bed_all:main"
 dev-dependencies = [
     "pip>=23.3.2",
     "pre-commit>=3.5.0",
-    "pytest>=7.4.4",
+    "pytest>=8.0",
     "pytest-cov>=4.1.0",
     "sphinx>=7.1.2",
     "esbonio-extensions>=0.2.2",
