--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -21,3 +21,14 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: _build
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: docs
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
