--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-python@v3
       - name: Install dependencies
         run: |
-          pip install sphinx myst_parser
+          pip install sphinx myst_parser sphinx-autodoc2
       - name: Sphinx build
         run: |
           sphinx-build docs _build
