--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dev-dependencies = [
     "sphinx>=7.1.2",
     "esbonio-extensions>=0.2.2",
     "myst-parser>=2.0.0",
+    "sphinx-autodoc2>=0.5.0",
 ]
 [tool.rye.scripts]
 cov-report = { chain = ["htmlcov", "htmlcov-serve"] }
