MISC: for several problems
1. remove renv.lock since it only work for Apple Silicon because the hash sum
2. ignore the R files in pre-commit since renv::restore() will modify it.
3. Update the documentation for R package installation.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
     rev: v4.5.0
     hooks:
     -   id: trailing-whitespace
+        exclude: .*\.R
     -   id: end-of-file-fixer
     -   id: check-toml
     -   id: check-yaml
