--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ dependencies = [
     "pyarrow>=15.0.0",
     "rpy2>=3.5.15",
     "pandas>=2.0.3",
+    "matplotlib>=3.7.5",
+    "biopython>=1.83",
 ]
 
 [project.scripts]
@@ -52,6 +54,7 @@ dev-dependencies = [
     "esbonio-extensions>=0.2.2",
     "myst-parser>=2.0.0",
     "sphinx-autodoc2>=0.5.0",
+    "ipykernel>=6.29.2",
 ]
 [tool.rye.scripts]
 cov-report = { chain = ["htmlcov", "htmlcov-serve"] }
@@ -62,6 +65,12 @@ htmlcov-serve = "python -m http.server --directory htmlcov"
 features = ["extension-module"]
 module-name = "argweaver.s"
 include = ["bin/*"]
+
+[[tool.mypy.overrides]]
+module = [
+    "rpy2.*",
+]
+ignore_missing_imports = true
 
 [tool.ruff]
 extend-select = ["I"]
