--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,14 +30,14 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install libatomic1
-        run: sudo apt-get install -y libatomic1
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
           args: --release --out dist
           sccache: 'true'
+          before-script-linux: |
+            sudo apt-get install -y libatomic1
           manylinux: auto
       - name: Upload wheels
         uses: actions/upload-artifact@v3
