--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,15 +27,14 @@ jobs:
         target: [x86_64, aarch64]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Set up Clang
-        uses: egor-tensin/setup-clang@v1
         if: startsWith(matrix.os, 'ubuntu')
-        with:
-          platform: ${{ matrix.target == 'x86_64' && 'x64' || matrix.target }}
+        run: |
+          sudo apt-get install -y llvm-dev libclang-dev clang
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
