FIX: try to set

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,8 +37,13 @@ jobs:
           sudo apt-get install -y llvm-dev libclang-dev clang
           sudo update-alternatives --install /usr/bin/cc cc /usr/bin/clang 100
           sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/clang++ 100
+      - name: Set up LIBCLANG_PATH
+        run: |
+          echo "LIBCLANG_PATH=$(llvm-config --libdir)" >> $GITHUB_ENV
       - name: Build wheels
         uses: PyO3/maturin-action@v1
+        env:
+          LIBCLANG_PATH: ${{ env.LIBCLANG_PATH }}
         with:
           target: ${{ matrix.target }}
           args: --release --out dist
