--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -4,11 +4,11 @@ on:
   push:
     paths:
       - 'docs/**'
-      - 'argweaver/**'
+      - 'argweavers/**'
   pull_request:
     paths:
       - 'docs/**'
-      - 'argweaver/**'
+      - 'argweavers/**'
   workflow_dispatch:
 
 permissions:
