--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,13 @@ pyo3-polars = { version = "0.11.1", optional = true }
 serde = { version = "1.0.195", features = ["derive"] }
 tempfile = "3.9.0"
 
+[dev-dependencies]
+criterion = { version = "0.4", features = ["html_reports"] }
+
+[[bench]]
+name = "my_benchmark"
+harness = false
+
 [features]
 default = []
 extension-module = [
