--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,19 @@ crate-type = ["lib", "cdylib"]
 
 [dependencies]
 autocxx = "0.26.0"
+bio = { version = "1.5.0", features = ["phylogeny"] }
 clap = { version = "4.4.18", features = ["derive", "cargo"] }
 csv = "1.3.0"
 cxx = "1.0.115"
 flate2 = "1.0.28"
+libc = "0.2.153"
+log = "0.4.20"
+log4rs = "1.3.0"
 nom = "7.1.3"
 polars = { version = "0.37.0", features = ["lazy"] }
 pyo3 = { version = "0.20", features = ["abi3-py38", "extension-module", "multiple-pymethods"], optional = true }
 pyo3-polars = { version = "0.11.1", optional = true }
+rust-htslib = { version = "0.46.0", features = ["libdeflate"] }
 serde = { version = "1.0.195", features = ["derive"] }
 tempfile = "3.9.0"
 
