--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,11 +31,13 @@ dependencies = [
     "numpy>=1.24.4",
     "polars>=0.20.9",
     "pyarrow>=15.0.0",
-    "rpy2>=3.5.15",
     "pandas>=2.0.3",
     "matplotlib>=3.7.5",
     "biopython>=1.83",
 ]
+
+[project.optional-dependencies]
+r = ["rpy2>=3.5.15"]
 
 [project.scripts]
 arg-likelihood = "argweavers.bin:arg_likelihood"
@@ -64,7 +66,6 @@ htmlcov-serve = "python -m http.server --directory htmlcov"
 
 [tool.maturin]
 features = ["extension-module"]
-include = ["bin/*"]
 
 [[tool.mypy.overrides]]
 module = [
