--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "pandas>=2.0.3",
     "matplotlib>=3.7.5",
     "biopython>=1.83",
+    "networkx>=3.1",
 ]
 
 [project.optional-dependencies]
@@ -58,6 +59,8 @@ dev-dependencies = [
     "sphinx-autodoc2>=0.5.0",
     "ipykernel>=6.29.2",
     "cibuildwheel>=2.16.5",
+    "seaborn>=0.13.2",
+    "snakeviz>=2.2.0",
 ]
 [tool.rye.scripts]
 cov-report = { chain = ["htmlcov", "htmlcov-serve"] }
