--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "matplotlib>=3.7.5",
     "biopython>=1.83",
     "networkx>=3.1",
+    "tskit>=0.5.6",
 ]
 
 [project.optional-dependencies]
